--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
+
 body {
     margin: 0;
+}
+
+.white {
+    color: #ffffff;
 }
