Stub out message page, create Dealer Vehicle Request page, use paper to surround all form pages, design for Dealer Dashboard

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
 body {
     margin: 0;
@@ -6,4 +6,13 @@ body {
 
 .white {
     color: #ffffff;
+}
+
+.vehicle-request-card {
+    border-radius: 5px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.main-body {
+   background-color: #f4f5f6;
 }
