Update dealer dashboard with messages, vehicles and improved vehicle requests. Placeholder vehicle page

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .vehicle-request-card {
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
