--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -34,6 +34,27 @@ body {
     /*background-attachment: fixed;*/
 }
 
+.promo-card-1 {
+    background: url('/promo-background-1.webp');
+    background-size: cover;
+    background-position-y: center;
+    color: white;
+}
+
+.promo-card-2 {
+    background: url('/promo-background-2.webp');
+    background-size: cover;
+    background-position-y: center;
+    color: white;
+}
+
+.promo-card-3 {
+    background: url('/promo-background-3.webp');
+    background-size: cover;
+    background-position-y: center;
+    color: white;
+}
+
 .blur-text {
     color: transparent;
     text-shadow: 0 0 10px #000;
